도입부 설명 추가

--- a/deep copy, shallow copy/원시 타입과 참조 타입.md
+++ b/deep copy, shallow copy/원시 타입과 참조 타입.md
@@ -1,6 +1,14 @@
 ## 원시 타입(primitive type)과 참조 타입(reference type)
 
+자바스크립트에서 데이터 타입은 크게 <strong>원시 타입(primitive type)</strong> 과 <strong>참조 타입(reference type)</strong>으로 나뉩니다. <br>
+<strong> 원시 타입 </strong> 은 변수 메모리에 값 자체가 할당됩니다. <br>
+반면 <strong> 참조 타입 </strong>은 변수 메모리에 값이 저장되는 것이 아니고 타입의 주소값이 저장되고 값은 힙(Heap)이라는 메모리 영역에 저장된다고 합니다.
+
+<br>
+
 <img src="image/Type.png"/>
+
+<br>
 
 ### 원시 타입 (Primitive Type)
 
